src/snapshots/regexml__re_compiler__tests__compile_combined.snap
---
source: src/re_compiler.rs
expression: "compiled(\"^a?b+c*$\").operation"
---
Sequence(
    Sequence {
        operations: [
            Bol(
                Bol,
            ),
            GreedyFixed(
                GreedyFixed {
                    operation: Atom(
                        Atom {
                            atom: [
                                'a',
                            ],
                            len: 1,
                        },
                    ),
                    min: 0,
                    max: 1,
                    len: 1,
                },
            ),
            GreedyFixed(
                GreedyFixed {
                    operation: Atom(
                        Atom {
                            atom: [
                                'b',
                            ],
                            len: 1,
                        },
                    ),
                    min: 1,
                    max: 18446744073709551615,
                    len: 1,
                },
            ),
            GreedyFixed(
                GreedyFixed {
                    operation: Atom(
                        Atom {
                            atom: [
                                'c',
                            ],
                            len: 1,
                        },
                    ),
                    min: 0,
                    max: 18446744073709551615,
                    len: 1,
                },
            ),
            Eol(
                Eol,
            ),
            EndProgram(
                EndProgram,
            ),
        ],
    },
)
